--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "20.x"
   },
   "scripts": {
-    "dev": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
